--- a/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
+++ b/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
@@ -4,3 +4,51 @@
     padding-top: 12px;
     padding-bottom: 12px;
 }
+
+.tList {
+    padding: 20px;
+    display: inline-block;
+    background: #e9e9e9;
+    min-width: 550px;
+}
+
+.tListItem {
+    list-style: none;
+    margin: auto;
+    margin-left: 20px;
+    min-height: 50px;
+    border-left: 1px dashed #123bb6;
+    padding: 0 0 50px 30px;
+    position: relative;
+ }
+
+.tListItem:last-child {
+    border-left: 0;
+}
+
+.tListItem::before {
+    position: absolute;
+    left: -18px;
+    top: -5px;
+    content: " ";
+    border: 8px solid #d1dbfa;
+    border-radius: 500%;
+    background: #123bb6;
+    height: 20px;
+    width: 20px;
+ }
+
+.tStep {
+    color: #123bb6;
+    position: relative;
+    width: 100px;
+    font-size: 12px;
+}
+
+.item-title {
+    color: #123bb6;
+}
+
+.tCodeBlock {
+    max-height: 300px;
+}
