--- a/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
+++ b/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
@@ -6,10 +6,10 @@
 }
 
 .tList {
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     display: inline-block;
     background: #e9e9e9;
-    min-width: 550px;
+    max-width: 550px;
 }
 
 .tListItem {
@@ -18,9 +18,9 @@
     margin-left: 20px;
     min-height: 50px;
     border-left: 1px dashed #123bb6;
-    padding: 0 0 50px 30px;
+    padding: 0 0 30px 30px;
     position: relative;
- }
+}
 
 .tListItem:last-child {
     border-left: 0;
@@ -36,7 +36,7 @@
     background: #123bb6;
     height: 20px;
     width: 20px;
- }
+}
 
 .tStep {
     color: #123bb6;
@@ -45,10 +45,20 @@
     font-size: 12px;
 }
 
-.item-title {
-    color: #123bb6;
-}
-
 .tCodeBlock {
     max-height: 300px;
+}
+
+.tProp {
+    background-color: #d7d7d7;
+    color: #333232;
+    font-size: 12px;
+    padding: 3px 10px;
+    border-radius: 10px;
+}
+
+.citationImg {
+    height: 450px;
+    width: 100%;
+    object-fit: contain;
 }
