--- a/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
+++ b/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
@@ -9,7 +9,6 @@
     padding: 20px 20px 0 20px;
     display: inline-block;
     background: #e9e9e9;
-    max-width: 550px;
 }
 
 .tListItem {
@@ -58,6 +57,6 @@
 
 .citationImg {
     height: 450px;
-    width: 100%;
+    max-width: 100%;
     object-fit: contain;
 }
